# GlobalSupply

./: README.md  R_functions.R  busq_hiperparametros.py  categ_data.parquet  cositaR.R  dagster_cloud.yaml  global_supply_chain_risk_2026.csv  main.py  modelos.py  modelos_clas.py  modelos_reg.py  my-project.duckdb  orquestacion_supplies.duckdb  pyproject.toml  reg_data.parquet  supplies_data_bis.parquet  temporal.py  testR.py
.dg/: telemetry.yaml
.github/workflows/: branch_deployments.yml  deploy.yml
.streamlit/: config.toml
.tmp_dagster_home_1mtqydgv/history/: runs.db
.tmp_dagster_home_1mtqydgv/schedules/: schedules.db
.tmp_dagster_home_f8__hwbp/history/: runs.db
.tmp_dagster_home_f8__hwbp/schedules/: schedules.db
.tmp_dagster_home_o76ja9ar/history/: runs.db
.tmp_dagster_home_o76ja9ar/schedules/: schedules.db
.tmp_dagster_home_pn2nval_/history/: runs.db
.tmp_dagster_home_pn2nval_/schedules/: schedules.db
.tmp_dagster_home_ujymt21h/history/: runs.db
.tmp_dagster_home_ujymt21h/schedules/: schedules.db
.tmp_dagster_home_z2vudoe3/history/: runs.db
.tmp_dagster_home_z2vudoe3/schedules/: schedules.db
Otros/: generando_daily.py
datos/: supplies_data.parquet
datos/daily_supplies/: supplies_to_predict_2025-12-29.parquet
entrenamiento_modelos/: busq_hiperparametros.py  modelos_clas.py  modelos_reg.py
modelos/: Gradient_boosting.pkl  K_vecinos_mas_cercanos.pkl  Máquinas_de_soporte_vectorial.pkl  Regresión_logistica.pkl  all_metrics.pkl
modelos_clasificacion/: K_vecinos_mas_cercanos.pkl  Regresión_logistica.pkl  all_metrics.pkl
modelos_regresion/: Bosques_aleatorios.pkl  Gradient_boosting.pkl  K_vecinos_mas_cercanos.pkl  Maquinas_de_soporte_vectorial.pkl  Regresion_lineal.pkl  all_metrics.pkl
(+81 files in other folders)
