[project]
name = "my_project"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.18",
    "dagster-duckdb>=0.28.18",
    "dagster-duckdb-pandas>=0.28.18",
    "kaggle>=1.7.4.5",
    "kagglehub>=1.0.0",
    "pandas>=2.3.3",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "my_project"
registry_modules = [
    "my_project.components.*",
]


