[project]
name = "orquestacion_supplies"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "coiled>=1.134.0",
    "dagster==1.12.18",
    "dagster-dg-cli>=1.12.18",
    "dagster-duckdb>=0.28.18",
    "dagster-duckdb-pandas>=0.28.18",
    "dask>=2026.3.0",
    "dask-ml>=2025.1.0",
    "joblib>=1.5.3",
    "kaggle>=1.7.4.5",
    "kagglehub>=1.0.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pygithub>=2.9.1",
    "rpy2>=3.6.7",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orquestacion_supplies"
registry_modules = [
    "orquestacion_supplies.components.*",
]


